[tool.poetry]
name = "dlutils"
version = "0.0.1"
description = "Utility functions for Deep Learning."
authors = [
  "Itto Higuchi <itto.higuchi@gmail.com>",
]
maintainers = [
  "Itto Higuchi <itto.higuchi@gmail.com>",
]
repository = "https://github.com/Itto1992/dlutils"
packages = [{include='src'}]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "*"
opencv-contrib-python-headless = "*"

[tool.poetry.group.dev.dependencies]
add-trailing-comma = "*"
autopep8 = "*"
flake8 = "*"
flake8-commas = "*"
flake8-isort = "*"
flake8-quotes = "*"
jupyter = "*"
jupyterlab = "*"
pep8-naming = "*"
pyproject-flake8 = "*"
youtube-dl = "*"

[tool.isort]
include_trailing_comma = true
line_length = 120
multi_line_output = 5

[tool.flake8]
max-line-length = 120
exclude = [
  "*/__init__.py",
]

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
